--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.19.2",
     "node-fetch": "^2.7.0",
+    "openai": "^5.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "web-vitals": "^2.1.4"
