--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "globals": "^16.0.0",
     "prettier": "^3.6.2",
     "vite": "^6.3.5"
+  },
+  "engines": {
+    "node": ">=22.14.0 <23.0.0"
   }
 }
