--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.21.2",
     "openai": "^5.5.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
