--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "jspdf": "^3.0.1",
     "openai": "^5.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
