--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.1",
     "jspdf": "^3.0.1",
     "node-fetch": "^3.3.2",
     "openai": "^5.8.2",
