--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "backend": "node server.js",
     "frontend": "vite --port 5173",
-    "dev": "concurrently \"npm:backend\" \"npm:frontend\"",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint .",
     "start": "node server.js",
-    "start:watch": "nodemon server.js"
+    "start:watch": "nodemon server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -35,6 +37,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
